[KYV-378] Refactored order-api date fields to be type LocalDateTime instead of String